# obs3dian

./: README.md  main.py  pyproject.toml
code/: config.py  core.py  hint.py  main.py  markdown.py  markdown_parser.py  s3.py
obs3dian/: main.py
obs3dian/src/: core.py  markdown.py  s3.py
src/: core.py  markdown.py  s3.py
src/obs3dian/: config.py  core.py  main.py  markdown.py  s3.py
src/test/: test_markdown.py  test_run.py
src/test/test_files/: test_gif.md  test_jpeg.md  test_jpg.md  test_png.md
