[tool.poetry]
name = "obs3dian"
version = "0.1.0"
description = "Easy image controller for obsidian. Change internal file links to externa"
authors = ["정명진 <thinkjin99@gmail.com>"]
readme = "README.md"
packages = [{include = "src", from="obs3dian"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.48"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
obs3dian = "obs3dian.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
