[tool.poetry]
name = "obs3dian"
version = "0.3.3"
description = "Easy image controller for obsidian. Change internal file links to externa"
authors = ["정명진 <thinkjin99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.34.48"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
obs3dian = "obs3dian.main:app"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
